@@ -205,6 +205,8 @@ changes to languages because of Bugzilla reports.
   3 headings)" was removed.
 * (bug 52810) Preference "Justify paragraphs" was removed.
 * OutputPage::showErrorPage raises a notice if arguments are incoherent.
+* (bug 52815) Preference "Enable simplified search bar (Vector skin only)"
+  was removed.
 
 ==== Removed classes ====
 * FakeMemCachedClient (deprecated in 1.18)
